<resources>
    <string name="app_name">Theguardians News</string>
    <string name="section_holder">Life</string>
    <string name="author">Author</string>
    <string name="title">text data that should wrap to more
        than 2 lines of text</string>
    <string name="date">Nov 10, 2019</string>
    <string name="time">12:00 PM</string>
    <string name="no_news">No news found. Please, try to search for another topic.</string>
    <string name="no_internet_connection">No internet connection.</string>

</resources>
